# nabto-webrtc-sdk-cpp

./: .gitignore  README.md
examples/libdatachannel/: .gitignore  CMakeLists.txt  CMakePresets.json  dependencies.diff  vcpkg-configuration.json  vcpkg.json
examples/libdatachannel/examples/common/: CMakeLists.txt
examples/libdatachannel/examples/common/curl_http_client/: curl_async.cpp  curl_async.hpp
examples/libdatachannel/examples/common/libdatachannel_websocket/: rtc_websocket_wrapper.hpp
examples/libdatachannel/examples/common/logging/: logging.hpp
examples/libdatachannel/examples/common/message_signer/: message_signer.hpp  none_message_signer.hpp  shared_secret_message_signer.hpp
examples/libdatachannel/examples/common/timer/: timer.hpp
examples/libdatachannel/examples/common/token_generator/: nabto_jwt.hpp  openssl_key_id.hpp  openssl_key_id_test.cpp  uuid.hpp
examples/libdatachannel/examples/common/webrtc_connection/: track_handler.hpp  webrtc_connection.cpp  webrtc_connection.hpp
examples/libdatachannel/examples/utils/rtp-client/: rtp_client.cpp  rtp_client.hpp  rtp_track.hpp
examples/libdatachannel/examples/utils/rtp-repacketizer/: h264_repacketizer.hpp  rtp_repacketizer.cpp  rtp_repacketizer.hpp
examples/libdatachannel/examples/webrtc-device/: CMakeLists.txt  h264_handler.hpp  main.cpp
examples/libdatachannel/examples/webrtc-device-rtsp/: CMakeLists.txt  h264_opus_rtsp_handler.hpp  main.cpp
examples/libdatachannel/examples/webrtc-device-rtsp/rtsp-client/: rtcp_client.hpp  rtsp_client.cpp  rtsp_client.hpp  tcp_rtp_client.cpp  tcp_rtp_client.hpp
examples/libdatachannel/examples/webrtc_device/: CMakeLists.txt  h264_handler.hpp  main.cpp
examples/libdatachannel/examples/webrtc_device_rtsp/: CMakeLists.txt  h264_opus_rtsp_handler.hpp  main.cpp
examples/libdatachannel/examples/webrtc_device_rtsp/rtsp-client/: rtcp_client.hpp  rtsp_client.cpp  rtsp_client.hpp  tcp_rtp_client.cpp  tcp_rtp_client.hpp
examples/libdatachannel/src/common/: CMakeLists.txt
examples/libdatachannel/src/common/libdatachannel_websocket/: rtc_websocket_wrapper.hpp
examples/libdatachannel/src/common/rtp_client/: rtp_client.cpp  rtp_track.hpp
examples/libdatachannel/src/common/rtp_repacketizer/: h264_repacketizer.hpp
examples/libdatachannel/src/common/webrtc_connection/: webrtc_connection.cpp  webrtc_connection.hpp
examples/libdatachannel/src/utils/rtp-client/: rtp_client.hpp
examples/libdatachannel/src/webrtc_device/: CMakeLists.txt  h264_handler.hpp  main.cpp
examples/libdatachannel/src/webrtc_device_rtsp/: CMakeLists.txt  h264_opus_rtsp_handler.hpp  main.cpp
examples/libdatachannel/src/webrtc_device_rtsp/rtsp-client/: rtsp_client.cpp  rtsp_client.hpp  tcp_rtp_client.hpp
examples/libdatachannel/src/webrtc_device_rtsp_h265/: CMakeLists.txt  h265_opus_rtsp_handler.hpp  main.cpp
examples/libdatachannel/src/webrtc_device_rtsp_h265/rtsp-client/: rtsp_client.cpp  rtsp_client.hpp  tcp_rtp_client.cpp  tcp_rtp_client.hpp
sdk/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
sdk/cmake_scripts/: Config.cmake.in  version.cmake
sdk/include/nabto/signaling/: signaling.hpp
sdk/integration-test/: integration_test.cpp  test_instance.hpp
sdk/integration-test/util/: CMakeLists.txt
sdk/integration-test/util/curl_http_client/: curl_async.cpp  curl_async.hpp
sdk/integration-test/util/libdatachannel_websocket/: rtc_websocket_wrapper.hpp
sdk/integration-test/util/timer/: timer.hpp
sdk/integration_test/: integration_test.cpp  test_instance.hpp
sdk/integration_test/util/: CMakeLists.txt
sdk/integration_test/util/curl_http_client/: curl_async.hpp
sdk/integration_test/util/libdatachannel_websocket/: rtc_websocket_wrapper.hpp
sdk/integration_test/util/timer/: timer.hpp
sdk/src/: logging.hpp  signaling.cpp  signaling_channel_impl.cpp  signaling_channel_impl.hpp  signaling_device_factory.cpp  signaling_device_impl.cpp  signaling_device_impl.hpp  signaling_device_impl_test.cpp  signaling_error.cpp  signaling_impl.hpp  websocket_connection.cpp  websocket_connection.hpp
sdk/src/signaling-device/: CMakeLists.txt  signaling_device_impl.cpp
sdk/src/signaling-util/curl_http_client/: CMakeLists.txt  curl_async.cpp
sdk/src/signaling-util/logging/: CMakeLists.txt
sdk/src/signaling_device/: CMakeLists.txt  logging.hpp
sdk/src/signaling_device/include/nabto/webrtc/: device.hpp
sdk/src/signaling_device/src/: logging.hpp  signaling.cpp  signaling_channel_impl.cpp  signaling_channel_impl.hpp  signaling_device_factory.cpp  signaling_device_impl.cpp  signaling_device_impl.hpp  signaling_device_impl_test.cpp  signaling_error.cpp  signaling_impl.hpp  websocket_connection.cpp  websocket_connection.hpp
sdk/src/signaling_util/curl_http_client/: CMakeLists.txt  curl_async.cpp
sdk/src/signaling_util/curl_http_client/include/nabto/webrtc/util/: curl_async.hpp
sdk/src/signaling_util/curl_http_client/src/: curl_async.cpp
sdk/src/signaling_util/logging/: CMakeLists.txt
sdk/src/signaling_util/logging/include/nabto/webrtc/util/: logging.hpp
sdk/src/signaling_util/message_transport/: CMakeLists.txt
sdk/src/signaling_util/message_transport/include/nabto/webrtc/util/: message_transport.hpp
sdk/src/signaling_util/message_transport/src/: message_signer.hpp  message_transport.cpp  message_transport_impl.cpp  message_transport_impl.hpp  none_message_signer.hpp  shared_secret_message_signer.hpp
sdk/src/signaling_util/std_timer/: CMakeLists.txt  std_timer.hpp
sdk/src/signaling_util/std_timer/include/nabto/webrtc/util/: std_timer.hpp
sdk/src/signaling_util/token_generator/: CMakeLists.txt  openssl_key_id.hpp  token_generator.hpp
sdk/src/signaling_util/token_generator/include/nabto/webrtc/util/: token_generator.hpp
sdk/src/signaling_util/token_generator/src/: openssl_key_id.hpp
sdk/src/signaling_util/uuid/: CMakeLists.txt
sdk/test/: create_destroy_signaling_device.cpp  message_transport_tests.cpp  openssl_key_id_test.cpp  signaling_device_impl_test.cpp  test_setup.cpp
(+13 files in other folders)
